pkg: configure option to build only FS specific packages.
Configure option to disable build of common packages:
--disable-common-rpms

Fix the case of "rpm -q xxx" returns "no package xxx found".

Change-Id: I74c5adfa57097aac495f4751be2f9c45c744aa7d

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,9 @@ else
   rpmbuild_opt=--without lustre
 endif
 
+if !COMMON_RPMS
+  rpmbuild_opt+=--without common_rpms
+endif
 
 if USE_MYSQL_DB
   rpmbuild_opt += --with mysql
