--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -14,10 +14,10 @@ EXTRA_DIST= robinhood.init			\
     cmd2man.sh make_mans.sh fix_man_options.sh \
     ld.so.robinhood.conf.in
 
+dist_sbin_SCRIPTS=rbh_md5_wrap.sh
+
 if COMMON_RPMS
-dist_sbin_SCRIPTS=rbh-config rbh_md5_wrap.sh
-else
-dist_sbin_SCRIPTS=
+dist_sbin_SCRIPTS+=rbh-config
 endif
 
 if HSM_LITE
