--- a/configure.ac
+++ b/configure.ac
@@ -55,6 +55,7 @@ AX_ENABLE_FLAG([strict], [Compile with -Wall -Werror], [-Wall -Werror])
 
 PKG_CHECK_MODULES(GLIB2, [glib-2.0 >= 2.16])
 PKG_CHECK_MODULES(GTHREAD2, [gthread-2.0])
+PKG_CHECK_MODULES([LIBUUID], [uuid >= 2.17])
 CFLAGS="$CFLAGS $GLIB2_CFLAGS $GTHREAD2_CFLAGS"
 LDFLAGS="$LDFLAGS $GLIB2_LIBS $GTHREAD2_LIBS"
 
