Add UUID support to Lustre HSM
The UUID is needed to uniquely identify a file in an archive
backend. This is an alternative to using FIDs, since FIDs will change
when a file is undeleted, or migrated between MDTs. When a UUID is
used, rebind is not necessary anymore.

The uuid block in the lhsm_config block in the configuration file is
used to indicate where the UUID comes from. Currently it's from an
extended attribute, using the xattr configuration option. That UUID
extended attribute is set in advance by a user or by a copytool doing
an archive operation is none exists.

For instance the name of the extended attribute is set as:
lhsm_config {
    uuid {
        xattr = "trusted.lhsm.uuid";
    }
}

The UUID populates the lhsm_uuid in the ENTRIES table. It is filled up
when Robinhood gets the CL_HSM/HE_ARCHIVE changelog event, or when the
filesystem is scanned.

If the file is deleted, it is also copied to the SOFT_RM table. When
the file is undeleted, the UUID is restored on disk, then copied back
into ENTRIES.

Added test 511 to test the scanning part, and test 512 to test the
changelogs processing and undelete operation.

Change-Id: Ie03dc1eaa93f5ef3e1612b6b2fe3a8d4fd1f8b2f

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -40,6 +40,9 @@ BuildRequires: libattr-devel
 BuildRequires: mailx
 %if %{with lustre}
 BuildRequires: %{lpackage} >= %{lversion}
+%if %{with lhsm}
+BuildRequires: libuuid-devel
+%endif
 %endif
 %if %{with mysql}
 BuildRequires: /usr/include/mysql/mysql.h
