Fix typo if config template.
Change-Id: Ia90eb328f1948d77d37bfdc34abda60241ed5687

--- a/doc/templates/example.conf
+++ b/doc/templates/example.conf
@@ -204,7 +204,7 @@ alert_rules {
 ########### md5 check rules ############
 
 fileclass never_checked {
-    # neber checked => last_check == 0
+    # never checked => last_check == 0
     # 'output' stands for previous command stdout
     definition { md5_check.last_check == 0 or md5_check.output == "" }
     # don't display this fileclass in --classinfo reports.
