cfg: rename 'recheck_ignored_classes' to 'recheck_ignored_entries'.
This parameter now not only applies to fileclasses: it applies to
all ignored entries.
Change the parameter name to reflect this change.

Change-Id: Ic03e29098634f3d19096113f2570de658a06b784

--- a/tests/test_suite/cfg/test_updt.conf
+++ b/tests/test_suite/cfg/test_updt.conf
@@ -102,7 +102,7 @@ fileclass to_be_released
 
 migration_parameters
 {
-    recheck_ignored_classes = yes;
+    recheck_ignored_entries = yes;
 }
 
 migration_rules
@@ -124,7 +124,7 @@ migration_rules
 
 purge_parameters
 {
-    recheck_ignored_classes = yes;
+    recheck_ignored_entries = yes;
 }
 
 purge_rules
