rbh_checker: improve rbh_cksum example script
- autodetect if on lustre
- configurable xattr lookup/setter
- configurable checksum utility

Change-Id: I4b79bfa1717143bddbc2cfeedf450ead80180145

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -291,7 +291,7 @@ fi
 %{_sbindir}/rbh-report
 %{_sbindir}/rbh-diff
 %{_sbindir}/rbh-undelete
-%{_sbindir}/rbh_md5_wrap.sh
+%{_sbindir}/rbh_cksum.sh
 %{_bindir}/rbh-du
 %{_bindir}/rbh-find
 
