Modify access rules

--- a/project.config
+++ b/project.config
@@ -9,6 +9,7 @@
 	push = group user/Thomas Leibovici (tl-cea)
 	label-Code-Review = -2..+2 group user/Thomas Leibovici (tl-cea)
 	label-Verified = -1..+1 group user/Thomas Leibovici (tl-cea)
+	label-Verified = -1..+1 group user/ganesha-triggers
 	rebase = group user/Thomas Leibovici (tl-cea)
 	removeReviewer = group user/Thomas Leibovici (tl-cea)
 	submit = group user/Thomas Leibovici (tl-cea)
