--- a/project.config
+++ b/project.config
@@ -8,6 +8,7 @@
 	read = group user/Thomas Leibovici (tl-cea)
 	push = group user/Thomas Leibovici (tl-cea)
 	label-Code-Review = -2..+2 group user/Thomas Leibovici (tl-cea)
+	label-Verified = -1..+1 group user/CEA-HPC (cea-gerrithub-hpc)
 	label-Verified = -1..+1 group user/Thomas Leibovici (tl-cea)
 	label-Verified = -1..+1 group user/ganesha-triggers
 	rebase = group user/Thomas Leibovici (tl-cea)
