Modify access rules

--- a/project.config
+++ b/project.config
@@ -19,6 +19,9 @@
 	create = group user/Thomas Leibovici (tl-cea)
 	push = +force group user/Thomas Leibovici (tl-cea)
 	pushMerge = group user/Thomas Leibovici (tl-cea)
+	label-Verified = -1..+1 group user/CEA-HPC (cea-gerrithub-hpc)
+	label-Verified = -1..+1 group user/Thomas Leibovici (tl-cea)
+	label-Verified = -1..+1 group user/ganesha-triggers
 [access "refs/tags/*"]
 	push = +force group user/Thomas Leibovici (tl-cea)
 	pushTag = group user/Thomas Leibovici (tl-cea)
