rbh_checker: set +x mode to 'rbh_chksum.sh'
Change-Id: Ibf735487f92dc3f55c51ab89ca4a0e9033467705

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -10,8 +10,8 @@ EXTRA_DIST= robinhood.init			\
 	demo/disk_usage.sh			\
 	demo/migr_purge.sh			\
 	demo/rh.migr_purge.conf			\
-	demo/write_data.sh  \
-    cmd2man.sh make_mans.sh fix_man_options.sh \
+	demo/write_data.sh  			\
+    cmd2man.sh make_mans.sh fix_man_options.sh  \
     ld.so.robinhood.conf.in rbh_cksum.sh.in
 
 dist_sbin_SCRIPTS=rbh_cksum.sh
@@ -23,3 +23,6 @@ endif
 if HSM_LITE
 dist_sbin_SCRIPTS+=rbhext_tool rbhext_tool_svr rbhext_tool_clnt
 endif
+
+all-local: rbh_cksum.sh
+	chmod 755 rbh_cksum.sh
