--- a/tests/test_suite/cfg/test_checker.conf
+++ b/tests/test_suite/cfg/test_checker.conf
@@ -4,15 +4,15 @@
 %include "../../../doc/templates/includes/check.inc"
 
 fileclass never_checked {
-    definition { md5_check.last_check == 0 or md5_check.output == "" }
+    definition { checksum.last_check == 0 or checksum.output == "" }
 }
 
-md5_check_parameters {
+checksum_parameters {
     # override default command path
     action = cmd("../../scripts/rbh_cksum.sh '{output}' '{path}'");
 }
 
-md5_check_rules {
+checksum_rules {
     ignore { last_check < 5 }
     ignore { last_mod < 5 }
 
