templates: rename 'md5_check' policy to 'checksum'.
Because 'checksum' name is more generic (checksum can be md5, sha1, ...).

Change-Id: I18abea79d1212b70726030651af11af9023c5dbc

--- a/doc/templates/example.conf
+++ b/doc/templates/example.conf
@@ -14,7 +14,7 @@ General {
 %include "includes/tmpfs.inc"
 # include template for alerts
 %include "includes/alerts.inc"
-# include template for md5 check
+# include template for checksuming
 %include "includes/check.inc"
 
 #### fileclass definitions ####
@@ -201,17 +201,17 @@ alert_rules {
     }
 }
 
-########### md5 check rules ############
+########### checksum rules ############
 
 fileclass never_checked {
     # never checked => last_check == 0
     # 'output' stands for previous command stdout
-    definition { md5_check.last_check == 0 or md5_check.output == "" }
+    definition { checksum.last_check == 0 or checksum.output == "" }
     # don't display this fileclass in --classinfo reports.
     report = no;
 }
 
-md5_check_rules {
+checksum_rules {
     ignore { last_check < 1d }
     ignore { last_mod < 1d }
 
@@ -225,8 +225,8 @@ md5_check_rules {
     }
 }
 
-# start md5_check hourly
-md5_check_trigger {
+# start checksum hourly
+checksum_trigger {
     trigger_on = periodic;
     check_interval = 1h;
 }
