cfg parsing: fix command parsing of Lustre/HSM module.
Restore default rebind_cmd (dropped by new command parsing).

Change-Id: I7e9a433f74e5bd31355d342b4e161f9ee77e233a

--- a/doc/templates/example.conf
+++ b/doc/templates/example.conf
@@ -59,7 +59,15 @@ FileClass f2 {
     definition { type == file and name == "file.2" }
 }
 
+#### Common Lustre/HSM parameters ####
+
+lhsm_config {
+    # used for 'undelete': command to change the fid of an entry in archive
+    rebind_cmd = "/usr/sbin/lhsmtool_posix --hsm_root=/tmp/backend --archive {archive_id} --rebind {oldfid} {newfid} {fsroot}";
+}
+
 #### Lustre/HSM archive configuration ####
+
 
 lhsm_archive_parameters {
     nb_threads = 8;
