configure: check for zlib
Work around the following dlopen error in some cases:

mod_mgt | Cannot dlopen() 'librbh_mod_alerter.so':
    librbh_mod_alerter.so: undefined symbol: gzflush

Change-Id: I47b2699d3bf1be1440ade25a1a95d353cbcc819d

--- a/configure.ac
+++ b/configure.ac
@@ -53,6 +53,11 @@ AC_CHECK_SIZEOF([pthread_t])
 
 AX_ENABLE_FLAG([strict], [Compile with -Wall -Werror], [-Wall -Werror])
 
+AC_CHECK_LIB(z, gzflush,
+  [LIBS="-lz $LIBS"
+   AC_DEFINE(HAVE_LIBZ, 1, [define if you have zlib])],
+  [AC_MSG_WARN([zlib is required])])
+
 PKG_CHECK_MODULES(GLIB2, [glib-2.0 >= 2.16])
 PKG_CHECK_MODULES(GTHREAD2, [gthread-2.0])
 CFLAGS="$CFLAGS $GLIB2_CFLAGS $GTHREAD2_CFLAGS"
