--- a/tests/test_suite/cfg/common.conf
+++ b/tests/test_suite/cfg/common.conf
@@ -3,8 +3,9 @@
 
 General
 {
-	fs_path = $RH_ROOT;
-	fs_type = $FS_TYPE;
+    fs_path = $RH_ROOT;
+    fs_type = $FS_TYPE;
+    uid_gid_as_numbers = $RBH_NUM_UIDGID;
 }
 
 # ChangeLog Reader configuration
