Added numerical UID/GID support
The UIDs and GIDs can be stored as numbers numbers in the database
instead of names.

The General configuration option takes the new option
uid_gid_as_numbers to control that behaviour:

  General
  {
    ...
    uid_gid_as_numbers = yes;
    ...
  }

It defaults to no. That option must be set before the database is
created. Robinhood tools such as rbh-find and rbh-report will also
display the UID / GID as numbers.

The test suite can be configured to run in this mode by setting the
environment variable RBH_NUM_UIDGID, with the tests 105 and 617
skipped:

  RBH_NUM_UIDGID=yes ./2-run-tests.sh

Change-Id: I716901660c2781f86dc7ca8d7c4d68d189ec8ce2

--- a/tests/test_suite/cfg/common.conf
+++ b/tests/test_suite/cfg/common.conf
@@ -5,6 +5,7 @@ General
 {
 	fs_path = $RH_ROOT;
 	fs_type = $FS_TYPE;
+    uid_gid_as_numbers = $RBH_NUM_UIDGID;
 }
 
 # ChangeLog Reader configuration
