Store ctime in the database
The file's change time (a.k.a. ctime) is now stored in the database,
in the last_mdchange column.

rbh-find and rbh-report have been updated to support searching for it
and display it.

Added test 120 to check that the correct times end in the database.

Change-Id: Iee8e608a7a4aeec8fcab8781e9d382813b471467

--- a/tests/test_suite/cfg/common.conf
+++ b/tests/test_suite/cfg/common.conf
@@ -3,8 +3,9 @@
 
 General
 {
-	fs_path = $RH_ROOT;
-	fs_type = $FS_TYPE;
+    fs_path = $RH_ROOT;
+    fs_type = $FS_TYPE;
+    last_access_only_atime = $RBH_TEST_LAST_ACCESS_ONLY_ATIME;
 }
 
 # ChangeLog Reader configuration
