The test rpm requires bc
bc appears to not always be installed, so add a dependency on it.

This fixes one of the issues reported in bug #26.

Change-Id: I79aa95d63ca3832bcf4aa1f678a53d3d43e7aa14

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -136,7 +136,7 @@ Tools for MDS recovery.
 %package tests
 Summary: Test suite for Robinhood
 Group: Applications/System
-Requires: robinhood robinhood-adm
+Requires: robinhood robinhood-adm bc
 Release: @RELEASE@.noarch
 
 %description tests
